AGG-2604 - Fix some of the text colors broken by contrast.

--- a/src/main/webapp/bundles/home/less/results.less
+++ b/src/main/webapp/bundles/home/less/results.less
@@ -388,7 +388,7 @@
 		// Special case as per design
 		.excessFeature.labelInColumn {
 			.content {
-				color: contrast(@btn-pagination-bg-color, #000, #fff, 46%);
+				color: #fff;
 				background: @btn-pagination-bg-color; //Match xs-results-pagination
 			}
 		}
